remove hidden copy from source button, word wrap issue

--- a/server/zanata-war/src/main/resources/org/zanata/webtrans/public/Application.css
+++ b/server/zanata-war/src/main/resources/org/zanata/webtrans/public/Application.css
@@ -283,7 +283,7 @@ tr.TableEditorRow.highlighted td.TableEditorCell-Middle {
 }
 
 tr.TableEditorRow.highlighted .gwt-Button-display-onhover {
-	display:block;
+	display:inline;
 	cursor:pointer;
 }
 
